--- a/template/la/section_properties.html
+++ b/template/la/section_properties.html
@@ -13,7 +13,11 @@
                     {%- if sub_property.is_additional_properties -%}
                         </em>
                     {%- endif -%}
-                    {%- if sub_property.refers_to.title -%}
+                    {%- if sub_property.title -%}
+                        <span style="color:black;font-weight:normal;font-style:oblique;font-size:-1;">
+                            {{ " " }}({{ sub_property.title }})
+                        </span>
+                    {%- elif sub_property.refers_to.title -%}
                         <span style="color:black;font-weight:normal;font-style:oblique;font-size:-1;">
                             {{ " " }}({{ sub_property.refers_to.title }})
                         </span>
