--- a/template/la/tabbed_section.html
+++ b/template/la/tabbed_section.html
@@ -1,5 +1,5 @@
 <h2 class="handle">
-  <label>{% if operator == "allOf" -%}All of{% elif operator == "anyOf" -%}Any of{% elif operator == "oneOf" -%}One of{% endif -%}</label>
+  <label>{% if operator == "allOf" -%}All Of:{% elif operator == "anyOf" -%}Any Of:{% elif operator == "oneOf" -%}One Of:{% endif -%}</label>
 </h2>
 {%- set tab_label = "Option" -%}
 {%- if operator == "allOf" -%}
